fixed spacing & opacity in title-container for 500px breakpoint

--- a/css/index.css
+++ b/css/index.css
@@ -105,6 +105,25 @@ nav span{
 .title-container hr{
     width:80%;
 }
+@media only screen and (max-width: 500px){
+    .title-container div{
+        width: 100%; 
+        align-content: space-around; 
+        height: 90vh; 
+    }
+    .title-container hr{
+        width: 100%; 
+    }
+    h1{
+        font-size: 5rem;
+        line-height: 5.5rem; 
+        opacity: 70%; 
+    }
+    button{
+        margin-top: 2%; 
+        padding: 10% ;
+    }
+}
 button{
     padding:1% 3%;
     font-size: 1.6rem;
@@ -144,7 +163,7 @@ button:hover{
         font-size: 70%; 
     }
     .artist img{
-        width: 75%; 
-        height: 75%; 
+        width: 70%; 
+        height: 70%; 
     }
 }
